# simple_polynomial_regression

./: CMakeLists.txt  README.md  create_csv.py  main.c  testes_generated.txt
csv_examples/: 2_gerado.csv  2_gerado_ruido.csv  csv_11.019718492441877.csv  csv_4555.csv  csv_5534.csv  csv_6064.csv
src/csv_reader/: csv_reader.c  csv_reader.h
src/gauss/: gauss_method.c  gauss_method.h
src/simple_polynomial_regression/: poly_utils.c  simple_polynomial_regression.c  simple_polynomial_regression.h
src/utils/: utils.c  utils.h
test-ipynb/: py-test.ipynb
